[project]
name = "gpu-ops-starlark-engine"
version = "0.1.0"
description = "Starlark policy engine for GPU Ops Platform"
readme = "starlark_engine/README.md"
requires-python = "==3.10.*"
dependencies = []


[project.scripts]
gputl-policy = "starlark_engine.engine:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# Explicitly specify packages to include
[tool.hatch.build.targets.wheel]
packages = ["starlark_engine"]


[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty"
]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
