[project]
name = "gpu-ops-starlark-engine"
version = "0.1.0"
description = "Starlark policy engine for GPU Ops Platform"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "starlark",
]


[project.scripts]
gputl-policy = "engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
